sonarlink private constructor and expressions