@@ -10,6 +10,7 @@ import java.util.stream.Collectors;
  * Helper class for extracting information from Cucumber test result objects
  */
 public class CucumberTestResultHelper {
+    private CucumberTestResultHelper() {}
 
     /**
      * Checks if all steps passed
@@ -21,7 +22,7 @@ public class CucumberTestResultHelper {
         List<Result> passedSteps = testResults
                 .stream()
                 .filter(tr -> tr.getStatus() == Status.PASSED)
-                .collect(Collectors.toList());
+                .toList();
 
         return passedSteps.size() == testResults.size();
     }
